--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="project">
                 <h3>Проект 2</h3>
-                <p>Пока что все из проектов сделанных мною, в дальнейшем я постараюсь сделать хоть какие нибудь проекты в свободное время.
+                <p>Пока что все из проектов сделанных мною, в дальнейшем я постараюсь сделать хоть какие нибудь проекты в свободное время.</p>
             </div>
         </div>
     </section>
