--- a/index.html
+++ b/index.html
@@ -6,80 +6,131 @@
     <title>Портфолио</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-        header {
-            background: #311c1c;
-            color: white;
-            padding: 20px;
-        }
-        section {
-            padding: 20px;
-        }
-        .projects {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-        .project {
-            background: white;
-            padding: 15px;
-            margin: 10px;
-            width: 300px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(131, 26, 26, 0.993);
-        }
-        footer {
-            background: #311c1c;
-            color: white;
-            padding: 10px;
-            margin-top: 20px;
-        }
-        .social-cards {
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-        margin-top: 20px;
-    }
+    font-family: 'Segoe UI', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(135deg, #1e1e2f, #2c3e50);
+    color: #fff;
+}
 
-    .card {
-        width: 220px;
-        padding: 20px;
-        text-decoration: none;
-        color: white;
-        border-radius: 12px;
-        transition: 0.3s ease;
-        transform: scale(1);
-    }
+/* ===== HEADER ===== */
+header {
+    background: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(10px);
+    padding: 40px 20px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+}
 
-    .card h3 {
-        margin: 0;
-        font-size: 22px;
-    }
+header h1 {
+    margin: 0;
+    font-size: 28px;
+    opacity: 0.9;
+}
 
-    .card p {
-        margin: 5px 0 0;
-        font-size: 16px;
-    }
+header h2 {
+    margin: 10px 0;
+    font-size: 32px;
+    color: #00d4ff;
+}
 
-    /* Анимация увеличения */
-        .card:hover {
-        transform: scale(1.1);
-    }
+header p {
+    font-size: 18px;
+    opacity: 0.8;
+}
 
-    /* Цвета */
-        .steam {
-        background: linear-gradient(135deg, #1b2838, #2a475e);
-    }
+/* ===== SECTIONS ===== */
+section {
+    padding: 60px 20px;
+}
 
-        .instagram {
-        background: linear-gradient(135deg, #e1306c, #f77737);
-    }
-        </style>
+h2 {
+    font-size: 28px;
+    margin-bottom: 30px;
+    position: relative;
+}
+
+h2::after {
+    content: "";
+    width: 60px;
+    height: 3px;
+    background: #00d4ff;
+    display: block;
+    margin: 10px auto;
+    border-radius: 10px;
+}
+
+/* ===== PROJECT CARDS ===== */
+.projects {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+}
+
+.project {
+    background: rgba(255, 255, 255, 0.08);
+    backdrop-filter: blur(15px);
+    padding: 25px;
+    width: 320px;
+    border-radius: 15px;
+    transition: 0.4s ease;
+    box-shadow: 0 15px 35px rgba(0,0,0,0.4);
+}
+
+.project:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 20px 40px rgba(0,0,0,0.6);
+}
+
+/* ===== SOCIAL CARDS ===== */
+.social-cards {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    flex-wrap: wrap;
+}
+
+.card {
+    width: 240px;
+    padding: 25px;
+    text-decoration: none;
+    color: white;
+    border-radius: 15px;
+    transition: 0.4s ease;
+    font-weight: bold;
+    box-shadow: 0 15px 30px rgba(0,0,0,0.5);
+}
+
+.card:hover {
+    transform: scale(1.1);
+}
+
+.steam {
+    background: linear-gradient(135deg, #1b2838, #2a475e);
+}
+
+.instagram {
+    background: linear-gradient(135deg, #e1306c, #833ab4);
+}
+
+/* ===== CONTACT LINKS ===== */
+a {
+    color: #00d4ff;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/* ===== FOOTER ===== */
+footer {
+    background: rgba(0,0,0,0.7);
+    padding: 20px;
+    margin-top: 40px;
+    font-size: 14px;
+    opacity: 0.8;
+}
 </head>
 <body>
     <header>
