--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 
 <style>
 
+/* ===== VARIABLES ===== */
+:root {
+    --bg-light: #fff8f0;
+    --text-light: #111;
+    --accent-light: #ff6f3c;
+
+    --bg-dark: #1b2838;
+    --text-dark: #f5f5f5;
+    --accent-dark: #00aaff;
+
+    --transition-speed: 0.3s;
+}
+
 /* ===== BASE ===== */
 html {
     scroll-behavior: smooth;
@@ -15,16 +28,46 @@ html {
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-    background: #f9f9f9;
-    color: #111;
+    background: var(--bg-light);
+    color: var(--text-light);
+    transition: background var(--transition-speed), color var(--transition-speed);
+}
+
+/* ===== THEME CLASSES ===== */
+body.dark {
+    background: var(--bg-dark);
+    color: var(--text-dark);
+}
+
+/* ===== THEME BUTTON ===== */
+.theme-toggle {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 10px 15px;
+    cursor: pointer;
+    background: var(--accent-light);
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: background var(--transition-speed), transform 0.2s ease;
+    z-index: 100;
+}
+
+body.dark .theme-toggle {
+    background: var(--accent-dark);
+}
+
+.theme-toggle:hover {
+    transform: scale(1.05);
 }
 
 /* ===== HEADER ===== */
 header {
     padding: 80px 20px;
     text-align: center;
-    background: #ffffff;
-    border-bottom: 1px solid #eaeaea;
+    background: transparent;
 }
 
 header h1 {
@@ -38,11 +81,22 @@ header h2 {
     font-size: 36px;
     margin: 15px 0;
     font-weight: 600;
+    color: var(--accent-light);
+    transition: color var(--transition-speed);
+}
+
+body.dark header h2 {
+    color: var(--accent-dark);
 }
 
 header p {
     font-size: 18px;
     color: #555;
+    transition: color var(--transition-speed);
+}
+
+body.dark header p {
+    color: #ccc;
 }
 
 /* ===== SECTIONS ===== */
@@ -65,7 +119,7 @@ h2 {
     margin-bottom: 30px;
 }
 
-/* ===== PROJECTS ===== */
+/* ===== PROJECT CARDS ===== */
 .projects {
     display: flex;
     flex-wrap: wrap;
@@ -76,25 +130,18 @@ h2 {
     flex: 1 1 40%;
     background: #ffffff;
     padding: 25px;
-    border-radius: 10px;
+    border-radius: 12px;
     border: 1px solid #eee;
-    transition: 0.3s ease;
+    transition: 0.3s ease, border-color var(--transition-speed);
 }
 
 .project:hover {
     transform: translateY(-5px);
 }
 
-/* ===== CONTACT LINKS ===== */
-a {
-    color: #000;
-    text-decoration: none;
-    border-bottom: 1px solid #ccc;
-    transition: 0.3s ease;
-}
-
-a:hover {
-    border-color: #000;
+body.dark .project {
+    background: #2a3b50;
+    border-color: #3b4a66;
 }
 
 /* ===== SOCIAL CARDS ===== */
@@ -107,15 +154,46 @@ a:hover {
 .card {
     flex: 1 1 40%;
     padding: 30px;
-    background: #111;
-    color: #fff;
     text-decoration: none;
+    color: #fff;
     border-radius: 12px;
-    transition: 0.3s ease;
+    transition: 0.3s ease, background var(--transition-speed);
 }
 
 .card:hover {
     transform: scale(1.05);
+}
+
+.card.steam {
+    background: #1b2838;
+}
+
+body.dark .card.steam {
+    background: #2a3b50;
+}
+
+.card.instagram {
+    background: #ff6f3c;
+}
+
+body.dark .card.instagram {
+    background: #00aaff;
+}
+
+/* ===== CONTACT LINKS ===== */
+a {
+    color: var(--accent-light);
+    text-decoration: none;
+    border-bottom: 1px solid #ccc;
+    transition: all var(--transition-speed);
+}
+
+body.dark a {
+    color: var(--accent-dark);
+}
+
+a:hover {
+    border-color: currentColor;
 }
 
 /* ===== FOOTER ===== */
@@ -123,14 +201,31 @@ footer {
     text-align: center;
     padding: 40px 20px;
     border-top: 1px solid #eaeaea;
-    background: #ffffff;
     color: #777;
+    transition: color var(--transition-speed);
 }
 
-</style>
-</head>
+body.dark footer {
+    color: #ccc;
+}
 
+/* ===== RESPONSIVE ===== */
+@media(max-width:768px) {
+    .projects, .social-cards {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .project, .card {
+        flex: 1 1 90%;
+    }
+}
+</style>
+
+</head>
 <body>
+
+<button class="theme-toggle">Тёмная тема</button>
 
 <header>
     <h1>Студент первого курса группы ИЭФ24-9к1</h1>
@@ -177,12 +272,12 @@ footer {
 <section>
     <h2>Мои профили</h2>
     <div class="social-cards">
-        <a href="https://steamcommunity.com/profiles/76561199148502814/" target="_blank" class="card">
+        <a href="https://steamcommunity.com/profiles/76561199148502814/" target="_blank" class="card steam">
             <h3>Steam</h3>
             <p>S1K4OV</p>
         </a>
 
-        <a href="https://www.instagram.com/sugurov_127/" target="_blank" class="card">
+        <a href="https://www.instagram.com/sugurov_127/" target="_blank" class="card instagram">
             <h3>Instagram</h3>
             <p>@sugurov_127</p>
         </a>
@@ -194,8 +289,7 @@ footer {
 </footer>
 
 <script>
-
-/* ===== ANIMATION ON SCROLL ===== */
+// ===== ANIMATION ON SCROLL =====
 const sections = document.querySelectorAll("section");
 
 const observer = new IntersectionObserver(entries => {
@@ -212,6 +306,16 @@ sections.forEach(section => {
     observer.observe(section);
 });
 
+// ===== THEME TOGGLE =====
+const toggleBtn = document.querySelector(".theme-toggle");
+toggleBtn.addEventListener("click", () => {
+    document.body.classList.toggle("dark");
+    if(document.body.classList.contains("dark")) {
+        toggleBtn.textContent = "Светлая тема";
+    } else {
+        toggleBtn.textContent = "Тёмная тема";
+    }
+});
 </script>
 
 </body>
